Do not leak rfkill file descriptors.

Summary:
They may be leaked into all child processes,
including regular Konsole terminals on KDE.

I observed them showing up at all processes in my KDE session, just checking
ls -la /proc/self/fd

Using O_CLOEXEC, things are resolved properly.

BUG: 386886

Reviewers: davidedmundson

Reviewed By: davidedmundson

Subscribers: drosca, bshah, broulik, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D8806